# LearnSoftRenderer

./: CMakeLists.txt  MathUtils.cpp  MathUtils.h  README.md  main.cpp  mesh.cpp  mesh.h  mymath.h  renderer.cpp  renderer.h  shader.cpp  shader.h  testUtils.h  texture.h
configuration/: root_directory.h.in
src/: main.cpp
src/graphics/: mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.h  texture.cpp  texture.h
src/math/: MathUtils.cpp  mathUtils.cpp  mathUtils.h
src/platform/: viewport.cpp  viewport.h
src/test/: testModel.h
